# polar

clients/apps/web/src/components/Metrics/: MetricChartBox.tsx
clients/apps/web/src/components/PaumaluPlus/: PaumaluPlus.tsx
clients/cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
clients/examples/checkout-embed/: package.json
clients/server/: app.py  mock_payment_handler.py  pyproject.toml  worker.py
clients/server/tests/: test_paumalu_plus.py
